Name:                treeedit
Version:             0.0.1
Cabal-Version:       >= 1.2
Synopsis:            Tree Editor based on the datastore backend
Category:            editors, development
Description:
  The datastore-based tree editor.

Author:              Eyal Lotem
Maintainer:          eyal.lotem@gmail.com
Copyright:           (c) 2010 by Eyal Lotem
License:             GPL
Stability:           experimental
build-type:          Simple

Executable Editor
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base >= 4 && < 5,
                       vtywidgets >= 0.0.6 && < 0.1,
                       vty >= 4.6 && < 4.7,
                       datastore >= 0.0 && < 0.1,
                       datastore-vtywidgets >= 0.0 && < 0.1,
                       containers >= 0.3 && < 0.5,
                       fclabels >= 0.11.1.1 && < 0.12,
                       binary == 0.5.*
  Other-Modules:       Editor.Data,
                       Editor.Anchors,
                       Editor.Config
  ghc-options:         -O2 -Wall
  main-is:             Editor/Main.hs
  ghc-prof-options:    -prof -auto-all

Executable toxml
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base >= 4 && < 5,
                       vtywidgets >= 0.0.6 && < 0.1,
                       vty >= 4.6 && < 4.7,
                       datastore >= 0.0 && < 0.1,
                       datastore-vtywidgets >= 0.0 && < 0.1,
                       fclabels >= 0.11.1.1 && < 0.12,
                       containers >= 0.3 && < 0.5,
                       binary == 0.5.*
  Other-Modules:       Editor.Data,
                       Editor.Anchors,
                       Editor.Config
  ghc-options:         -O2 -Wall
  main-is:             Editor/toxml.hs
  ghc-prof-options:    -prof -auto-all
